--- a/Laboratorium 5/lab5_carbon_class.ipynb
+++ b/Laboratorium 5/lab5_carbon_class.ipynb
@@ -25,7 +25,7 @@
     "    return img & ~remove_small_objects(img, min_size=max_size)\n",
     "\n",
     "\n",
-    "class ProbioDetector:\n",
+    "class CarbonDetector:\n",
     "    RGB_THRESHOLD_RANGES = ((0, 0, 0), (65, 65, 65))\n",
     "    MORPH_KERNEL_SIZE = 5\n",
     "    MIN_OBJECT_SIZE = 3000\n",
@@ -43,24 +43,24 @@
     "        # 2. thresholding\n",
     "        thresholded = cv2.inRange(\n",
     "            calib_eq_hist,\n",
-    "            ProbioDetector.RGB_THRESHOLD_RANGES[0],\n",
-    "            ProbioDetector.RGB_THRESHOLD_RANGES[1],\n",
+    "            CarbonDetector.RGB_THRESHOLD_RANGES[0],\n",
+    "            CarbonDetector.RGB_THRESHOLD_RANGES[1],\n",
     "        )\n",
     "\n",
     "        # 3. morphological opening to remove noise\n",
     "        kernel = cv2.getStructuringElement(\n",
     "            cv2.MORPH_CROSS,\n",
-    "            (ProbioDetector.MORPH_KERNEL_SIZE, ProbioDetector.MORPH_KERNEL_SIZE),\n",
+    "            (CarbonDetector.MORPH_KERNEL_SIZE, CarbonDetector.MORPH_KERNEL_SIZE),\n",
     "        )\n",
     "        img = cv2.morphologyEx(thresholded, cv2.MORPH_OPEN, kernel)\n",
     "\n",
     "        # 4. morphological removing small objects - further denoising\n",
     "        img_no_small_objects = remove_small_objects(\n",
-    "            img > 0, min_size=ProbioDetector.MIN_OBJECT_SIZE\n",
+    "            img > 0, min_size=CarbonDetector.MIN_OBJECT_SIZE\n",
     "        )\n",
     "\n",
     "        img_no_large_objects = remove_large_objects(\n",
-    "            img_no_small_objects, max_size=ProbioDetector.TOO_LARGE_AREA_THRESHOLD\n",
+    "            img_no_small_objects, max_size=CarbonDetector.TOO_LARGE_AREA_THRESHOLD\n",
     "        )\n",
     "\n",
     "        # 5. morphological closing to close pill edges\n",
@@ -69,13 +69,13 @@
     "            cv2.MORPH_CLOSE,\n",
     "            cv2.getStructuringElement(\n",
     "                cv2.MORPH_ELLIPSE,\n",
-    "                (ProbioDetector.MORPH_KERNEL_SIZE, ProbioDetector.MORPH_KERNEL_SIZE),\n",
+    "                (CarbonDetector.MORPH_KERNEL_SIZE, CarbonDetector.MORPH_KERNEL_SIZE),\n",
     "            ),\n",
     "        )\n",
     "\n",
     "        # 6. morphological removing small holes inside edges\n",
     "        img_no_small_holes = remove_small_holes(\n",
-    "            closed > 0, area_threshold=ProbioDetector.SMALL_HOLE_AREA_THRESHOLD\n",
+    "            closed > 0, area_threshold=CarbonDetector.SMALL_HOLE_AREA_THRESHOLD\n",
     "        )\n",
     "\n",
     "        return img_no_small_holes"
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "thresholded = ProbioDetector.threshold(calib_img)\n",
+    "thresholded = CarbonDetector.threshold(calib_img)\n",
     "plt.imshow(thresholded, cmap=\"gray\")"
    ]
   },
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "thresholded = ProbioDetector.threshold(test_img)\n",
+    "thresholded = CarbonDetector.threshold(test_img)\n",
     "plt.imshow(thresholded, cmap=\"gray\")"
    ]
   }
