--- a/Laboratorium 5/lab5_espu.ipynb
+++ b/Laboratorium 5/lab5_espu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f215d934580>"
+       "<matplotlib.image.AxesImage at 0x7f2db3e3a9d0>"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e46456db92754d38bb3695606df40d0d",
+       "model_id": "6353ed5d5bb54bab860bef9bf7129dd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f215d91ed00>"
+       "<matplotlib.image.AxesImage at 0x7f2db3cd88e0>"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f215d7f9100>"
+       "<matplotlib.image.AxesImage at 0x7f2db3ca86d0>"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f215d7d2d30>"
+       "<matplotlib.image.AxesImage at 0x7f2db04c2e50>"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
