--- a/Laboratorium 5/lab5_espu_class.ipynb
+++ b/Laboratorium 5/lab5_espu_class.ipynb
@@ -34,11 +34,10 @@
     "    @staticmethod\n",
     "    def threshold(bgr_image: np.ndarray):\n",
     "        calib_rgb = cv2.cvtColor(bgr_image, cv2.COLOR_BGR2RGB)\n",
-    "        calib_eq_hist = calib_rgb\n",
     "\n",
-    "        # 1. thresholding anything that is yellow\n",
+    "        # 1. thresholding anything that is yellow (ish)\n",
     "        thresholded = cv2.inRange(\n",
-    "            cv2.cvtColor(calib_eq_hist, cv2.COLOR_RGB2HSV),\n",
+    "            cv2.cvtColor(calib_rgb, cv2.COLOR_RGB2HSV),\n",
     "            EspuDetector.HSV_THRESHOLD_RANGES[0],\n",
     "            EspuDetector.HSV_THRESHOLD_RANGES[1],\n",
     "        )\n",
