--- a/Laboratorium 5/lab5_keto.ipynb
+++ b/Laboratorium 5/lab5_keto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe02bcff2e0>"
+       "<matplotlib.image.AxesImage at 0x7f6e607b99d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16a21d8add1f415b8c36d0e2a78c276e",
+       "model_id": "48b41a1c8b2d410c80c44f427ee38da6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2910531d37c74ac990fd8973c14fe193",
+       "model_id": "541a8b3b18a24f168bb42abae8bae370",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe02bd11ca0>"
+       "<matplotlib.image.AxesImage at 0x7f6e606dbd30>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,47 +224,6 @@
     "    if (thresholded_img[rr, cc] == 255).all():\n",
     "        zeros[rr, cc] = 255\n",
     "plt.imshow(zeros, cmap=\"gray\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1566 1074   44]\n",
-      "[1540  988   44]\n",
-      "[1464  944   44]\n",
-      "[1442  488   47]\n",
-      "[1518  878   44]\n",
-      "[1486  672   44]\n",
-      "[1248 1140   37]\n",
-      "[1000  136   38]\n",
-      "[1226 1010   38]\n",
-      "[1404  600   48]\n",
-      "[1296  990   38]\n",
-      "[1322 1118   36]\n",
-      "[1934  848   30]\n",
-      "[1940  524   30]\n",
-      "[1996  850   32]\n",
-      "[1934 1006   30]\n",
-      "[1148  576   33]\n",
-      "[1016 1064   37]\n",
-      "[1972  944   33]\n",
-      "[2174 1000   32]\n",
-      "[1994 1002   31]\n",
-      "[1892  592   33]\n",
-      "[1138 1094   39]\n",
-      "[1854  514   36]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for circle in detected_hough_circles[0]:\n",
-    "    print(circle)"
    ]
   }
  ],
