--- a/Laboratorium 5/lab5_keto_class.ipynb
+++ b/Laboratorium 5/lab5_keto_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +39,10 @@
     "    @staticmethod\n",
     "    def threshold_and_circles(bgr_image: np.ndarray):\n",
     "        calib_rgb = cv2.cvtColor(bgr_image, cv2.COLOR_BGR2RGB)\n",
-    "        calib_eq_hist = calib_rgb\n",
     "\n",
     "        # 1. thresholding box + blue pills in it\n",
     "        thresholded = cv2.inRange(\n",
-    "            cv2.cvtColor(calib_eq_hist, cv2.COLOR_RGB2HSV),\n",
+    "            cv2.cvtColor(calib_rgb, cv2.COLOR_RGB2HSV),\n",
     "            KetoDetector.HSV_THRESHOLD_RANGES[0],\n",
     "            KetoDetector.HSV_THRESHOLD_RANGES[1],\n",
     "        )\n",
@@ -54,7 +53,7 @@
     "            0,\n",
     "        )\n",
     "\n",
-    "        # 2. Hough circles\n",
+    "        # 2. Hough circles to detect circles in the image that may be keto pills\n",
     "        circles = cv2.HoughCircles(\n",
     "            img_blurred,\n",
     "            cv2.HOUGH_GRADIENT,\n",
@@ -75,6 +74,7 @@
     "                radius=circle[2],\n",
     "                shape=calib_rgb.shape[:2],\n",
     "            )\n",
+    "            # 3.1 check if the circle is inside the thresholded box + blue pills\n",
     "            if (thresholded[rr, cc] == 255).all():\n",
     "                zeros[rr, cc] = 255\n",
     "                valid_circles.append(circle)\n",
@@ -84,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f244e50bf40>"
+       "<matplotlib.image.AxesImage at 0x7f7f4196bb80>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -115,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2494669850>"
+       "<matplotlib.image.AxesImage at 0x7f7f40dccdc0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f249459b610>"
+       "<matplotlib.image.AxesImage at 0x7f7f40d52790>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -177,16 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2494480a60>"
+       "<matplotlib.image.AxesImage at 0x7f7f40ccae50>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
