--- a/Laboratorium 5/lab5_probio.ipynb
+++ b/Laboratorium 5/lab5_probio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ef49470d0>"
+       "<matplotlib.image.AxesImage at 0x7fc8a1d8fa90>"
       ]
      },
-     "execution_count": 441,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9af62fc555e044a796d1a4c6c2e2d6e9",
+       "model_id": "e176eaa73ef440169b8885a5bc5cfb75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ef48c2610>"
+       "<matplotlib.image.AxesImage at 0x7fc8a1163c70>"
       ]
      },
-     "execution_count": 444,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ef47b7a60>"
+       "<matplotlib.image.AxesImage at 0x7fc8a1143220>"
       ]
      },
-     "execution_count": 445,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ef4733820>"
+       "<matplotlib.image.AxesImage at 0x7fc89c3f1940>"
       ]
      },
-     "execution_count": 446,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f0ef46bffa0>"
+       "<matplotlib.image.AxesImage at 0x7fc89c388520>"
       ]
      },
-     "execution_count": 447,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
