--- a/Laboratorium 5/lab5_probio_class.ipynb
+++ b/Laboratorium 5/lab5_probio_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +34,14 @@
     "\n",
     "    @staticmethod\n",
     "    def threshold(bgr_image: np.ndarray):\n",
-    "        # 1. multichannel histogram equalization\n",
     "        copied_input = bgr_image.copy()\n",
-    "        calib_rgb = cv2.cvtColor(copied_input, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "        calib_eq_hist = calib_rgb\n",
+    "        # 1. to RGB\n",
+    "        calib_rgb = cv2.cvtColor(copied_input, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "        # 2. thresholding\n",
     "        thresholded = cv2.inRange(\n",
-    "            calib_eq_hist,\n",
+    "            calib_rgb,\n",
     "            ProbioDetector.RGB_THRESHOLD_RANGES[0],\n",
     "            ProbioDetector.RGB_THRESHOLD_RANGES[1],\n",
     "        )\n",
@@ -54,7 +53,7 @@
     "        )\n",
     "        img = cv2.morphologyEx(thresholded, cv2.MORPH_OPEN, kernel)\n",
     "\n",
-    "        # 4. morphological removing small objects - further denoising\n",
+    "        # 4. morphological removing toos small/too large objects for further denoising\n",
     "        img_no_small_objects = remove_small_objects(\n",
     "            img > 0, min_size=ProbioDetector.MIN_OBJECT_SIZE\n",
     "        )\n",
@@ -83,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6a8be5f10>"
+       "<matplotlib.image.AxesImage at 0x7f2c2565d850>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -114,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6a8b56340>"
+       "<matplotlib.image.AxesImage at 0x7f2c24d017f0>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -145,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6a8d89fa0>"
+       "<matplotlib.image.AxesImage at 0x7f2c24c87550>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc6a92b6dc0>"
+       "<matplotlib.image.AxesImage at 0x7f2c24c80850>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
