--- a/Laboratorium 5/lab5_carbon_class.ipynb
+++ b/Laboratorium 5/lab5_carbon_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +34,13 @@
     "\n",
     "    @staticmethod\n",
     "    def threshold(bgr_image: np.ndarray):\n",
-    "        # 1. multichannel histogram equalization\n",
+    "        # 1. to RGB\n",
     "        copied_input = bgr_image.copy()\n",
     "        calib_rgb = cv2.cvtColor(copied_input, cv2.COLOR_BGR2RGB)\n",
     "\n",
-    "        calib_eq_hist = calib_rgb\n",
-    "\n",
     "        # 2. thresholding\n",
     "        thresholded = cv2.inRange(\n",
-    "            calib_eq_hist,\n",
+    "            calib_rgb,\n",
     "            CarbonDetector.RGB_THRESHOLD_RANGES[0],\n",
     "            CarbonDetector.RGB_THRESHOLD_RANGES[1],\n",
     "        )\n",
@@ -54,7 +52,7 @@
     "        )\n",
     "        img = cv2.morphologyEx(thresholded, cv2.MORPH_OPEN, kernel)\n",
     "\n",
-    "        # 4. morphological removing small objects - further denoising\n",
+    "        # 4. morphological removing too small/too large objects for further denoising\n",
     "        img_no_small_objects = remove_small_objects(\n",
     "            img > 0, min_size=CarbonDetector.MIN_OBJECT_SIZE\n",
     "        )\n",
@@ -83,16 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fee6f69a8b0>"
+       "<matplotlib.image.AxesImage at 0x7f28b0762b20>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -114,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fee6eacc970>"
+       "<matplotlib.image.AxesImage at 0x7f28b24547f0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -145,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fee6ea4d400>"
+       "<matplotlib.image.AxesImage at 0x7f28b252a940>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,16 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fee6e9c6820>"
+       "<matplotlib.image.AxesImage at 0x7f28b23be3d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
