Add detection display

--- a/Laboratorium 5/lab5_biox.ipynb
+++ b/Laboratorium 5/lab5_biox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbb4b01d280>"
+       "<matplotlib.image.AxesImage at 0x7f850c56a6a0>"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c061996636c4bf29e282a482cec2065",
+       "model_id": "36249354f6c34be485beabc5ba3a81f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac345dfa0>"
+       "<matplotlib.image.AxesImage at 0x7f850c3a3fd0>"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -172,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac3413e50>"
+       "<matplotlib.image.AxesImage at 0x7f850c2a48b0>"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac3352730>"
+       "<matplotlib.image.AxesImage at 0x7f850c2a1820>"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -234,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac32cf760>"
+       "<matplotlib.image.AxesImage at 0x7f852cfff1f0>"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -265,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac3250880>"
+       "<matplotlib.image.AxesImage at 0x7f850c43a310>"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,13 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81678297359648fe93bdfecad92d7f8d",
+       "model_id": "173e29bdb4d04f539c6ec23cd8c81768",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac31e48e0>"
+       "<matplotlib.image.AxesImage at 0x7f852ce8f0a0>"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -382,16 +382,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac3231af0>"
+       "<matplotlib.image.AxesImage at 0x7f852ce7a1f0>"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -428,10 +428,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac3042a60>"
+       "<matplotlib.image.AxesImage at 0x7f853251a700>"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbac3031d90>"
+       "<matplotlib.image.AxesImage at 0x7f85324a2b20>"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -484,6 +484,24 @@
    "source": [
     "results = cv2.watershed(calib_eq_hist, components)\n",
     "plt.subplots(1, 1, figsize=(12, 8))[1].imshow(results, cmap=\"jet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_results = np.unique(results[results > 1])\n",
+    "\n",
+    "for res_index in filtered_results:\n",
+    "    res = np.zeros_like(results)\n",
+    "    res[results == res_index] = 255\n",
+    "    contours, _ = cv2.findContours(\n",
+    "        res.astype(np.uint8), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE\n",
+    "    )\n",
+    "    contour = contours[0]\n",
+    "    bounding_rect = cv2.boundingRect(contour)"
    ]
   }
  ],
