--- a/Laboratorium 5/lab5_carbon.ipynb
+++ b/Laboratorium 5/lab5_carbon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f89513caaf0>"
+       "<matplotlib.image.AxesImage at 0x7ff0cc4fa250>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0d30424d4734df986ed8ed8d6f4c0ab",
+       "model_id": "270b5b51806341b9b14ad60bdb715d6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f895078ba00>"
+       "<matplotlib.image.AxesImage at 0x7ff0cc237100>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8950787160>"
+       "<matplotlib.image.AxesImage at 0x7ff0cc352580>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f894c2326d0>"
+       "<matplotlib.image.AxesImage at 0x7ff0c47897c0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f894c1c1460>"
+       "<matplotlib.image.AxesImage at 0x7ff0cc487a90>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,6 +256,19 @@
     ")\n",
     "img_no_small_holes = remove_small_holes(closed > 0, area_threshold=7000)\n",
     "plt.subplots(1, 1, figsize=(12, 8))[1].imshow(img_no_small_holes, cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contours, hierarchy = cv2.findContours(\n",
+    "    img_no_small_holes.astype(np.uint8), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE\n",
+    ")\n",
+    "for contour in contours:\n",
+    "    bounding_rect = cv2.boundingRect(contour)"
    ]
   }
  ],
