--- a/Laboratorium 5/lab5_espu.ipynb
+++ b/Laboratorium 5/lab5_espu.ipynb
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2db3e3a9d0>"
+       "<matplotlib.image.AxesImage at 0x7ff73f98ca90>"
       ]
      },
      "execution_count": 3,
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6353ed5d5bb54bab860bef9bf7129dd3",
+       "model_id": "c77d398c0c874a5aa49880d7975d926a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2db3cd88e0>"
+       "<matplotlib.image.AxesImage at 0x7ff73edada90>"
       ]
      },
      "execution_count": 6,
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2db3ca86d0>"
+       "<matplotlib.image.AxesImage at 0x7ff73ed570d0>"
       ]
      },
      "execution_count": 7,
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2db04c2e50>"
+       "<matplotlib.image.AxesImage at 0x7ff72c7e9070>"
       ]
      },
      "execution_count": 8,
